<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ChangePasswordDialogFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutOldPass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/editTextTextOldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNewPass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayoutOldPass"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/editTextTextNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutConfirmPass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayoutNewPass"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/editTextTextConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayoutConfirmPass"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelChangePass"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:backgroundTint="#FA0000"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnChangeChangePass"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:background="@drawable/button"
            android:text="@string/change"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>