<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostTripActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/postTripTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="Post Trip"
        app:titleTextColor="@color/white" />

    <Spinner
        android:id="@+id/postTripUniSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postTripTopBar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/select_the_days_and_times_you_go_to_university"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postTripUniSpinner" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="25dp"
                android:text="@string/check_in" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/check_out" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:theme="@style/MySwitch"
                app:switchPadding="10dp" />

            <TextView
                android:id="@+id/monCheckIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/_00_00"
                android:textColor="@color/black"
                android:textSize="@dimen/timeTxtSize"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/monCheckOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/_00_00"
                android:textColor="@color/black"
                android:textSize="@dimen/timeTxtSize"
                android:visibility="invisible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchTue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:theme="@style/MySwitch"
                app:switchPadding="10dp" />

            <TextView
                android:id="@+id/tueCheckIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/_00_00"
                android:textColor="@color/black"
                android:textSize="@dimen/timeTxtSize"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tueCheckOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/_00_00"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="invisible" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchWed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:theme="@style/MySwitch"
                app:switchPadding="10dp" />

            <TextView
                android:id="@+id/wedCheckIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/_00_00"
                android:textColor="@color/black"
                android:textSize="@dimen/timeTxtSize"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/wedCheckOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/_00_00"
                android:textColor="@color/black"
                android:textSize="@dimen/timeTxtSize"
                android:visibility="invisible" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchThu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:theme="@style/MySwitch"
                app:switchPadding="10dp" />

            <TextView
                android:id="@+id/thuCheckIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/_00_00"
                android:textColor="@color/black"
                android:textSize="@dimen/timeTxtSize"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/thuCheckOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/_00_00"
                android:textColor="@color/black"
                android:textSize="@dimen/timeTxtSize"
                android:visibility="invisible" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchFri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:theme="@style/MySwitch"
                app:switchPadding="10dp" />

            <TextView
                android:id="@+id/friCheckIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/_00_00"
                android:textColor="@color/black"
                android:textSize="@dimen/timeTxtSize"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/friCheckOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/_00_00"
                android:textColor="@color/black"
                android:textSize="@dimen/timeTxtSize"
                android:visibility="invisible" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnAddRoute"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/add_route"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button"
        android:text="@string/post"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>